Carga de imagenes a cloudinary

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -123,6 +123,7 @@ h4 {
   height: 42px;
   background-color: darkkhaki;
   font-family: "Poppins";
+  font-size: 12px;
   color: black;
   border-radius: 5px;
 }
