--- a/src/views/products.hbs
+++ b/src/views/products.hbs
@@ -67,7 +67,7 @@
     {{#each payload}}
 
     <div class="card" style="width: 300px;">
-        {{#if this.thumbnail.length}}
+        {{#if this.thumbnail}}
         <img src="{{this.thumbnail}}" class="card-img-top" alt="{{this.title}}" width="75" height="250" />
         {{else}}
         Sin Imágen
