--- a/src/views/realTimeProducts.hbs
+++ b/src/views/realTimeProducts.hbs
@@ -1,8 +1,8 @@
 {{> header}}
-<hr>
-  <h3>Nuevo Producto</h3>
 
+  
   {{!-- Formulario de addproduct --}}
+  {{!-- <h3>Nuevo Producto</h3>
 
   <form id="formAddProduct">
 
@@ -36,13 +36,13 @@
     </div>
 
 </div>
-</form>
+</form> 
 <br>
 <div class="btnAddProd">
   <button type="submit" class="btn btn-primary btnAddProduct">Guardar</button>
 </div>
 
-<br>
+<br>--}}
 <hr>
 <br>
 
